# med-assistant

./: .gitignore  README.md  config.py  pyproject.toml  settings.py
app/: main.py
app/archive_manager/: base.py  editor.py  exceptions.py  exporter.py  normalizer.py  templates.py
app/archiver/: base.py  editor.py  exceptions.py  exporter.py  normalizer.py
app/core/: config.py  logger.py
app/desktop/: checkbuttons.py  pyqt_ui.py  refactor.py  tkinter_ui.py  ui.py
app/todo/: refactor.py  tkinter_ui.py
app/ui/: checkboxes.py  checkedData.py  config.py  main.py  patientData.py  patient_data.py  pyqt_ui.py
archive_manager/: editor.py  exceptions.py  exporter.py  files.py  templates.py  util.py
archive_tools/: editor.py
db_manager/: creator.py  models.py
informer/: __init__.py  logger.py  status.py
logs/: decorator.py
normalizer/: __init__.py  date.py
normalizers/: date.py  name.py
