[tool.poetry]
name = "med-assistant"
version = "0.1.0"
description = ""
authors = ["Ivan Pavlov <ivnpvl@disroot.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pyqt6 = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
