[tool.poetry]
name = "med-assistant"
version = "0.1.0"
description = ""
authors = ["Ivan Pavlov <ivnpvl@disroot.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pyqt6 = "^6.8.0"
python-docx = "^1.1.2"
odfpy = "^1.4.1"

[tool.poetry.scripts]
app = "app.ui.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
