[project]
name = "app"
version = "0.1.0"
description = "Generator and storage of medical documentation."
requires-python = ">=3.13"
authors = [
    { name = "Ivan Pavlov", email = "<ivnpvl@disroot.org>" },
]
license = "MIT"
readme = "README.md"
dependencies = [
    "pyqt6>=6.8.0",
    "python-docx>=1.1.2",
    "odfpy>=1.4.1",
]

[project.scripts]
app = "app.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
